# old-personal-site

./: .gitignore  LICENSE  README.md  about.html  asset-manifest.json  deploy.sh  experience.html  index.html  jakobeha-website.cabal  manifest.json  projects.html  service-worker.js  site.hs
.history/: deploy_20200217162009.sh  deploy_20200217162042.sh  deploy_20200217162304.sh  deploy_20200217162412.sh  deploy_20200217162646.sh  deploy_20200217162732.sh  deploy_20200217162747.sh  deploy_20200217162807.sh  deploy_20200217163210.sh
.history/_site/: index_20200216172935.html  index_20200216233439.html
_site/: index.html
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/environment.-34650/: .ghc.environment.x86_64-darwin-8.6.5
dist-newstyle/tmp/environment.-40079/: .ghc.environment.x86_64-darwin-8.6.5
pages/: about.md  experience.md  index.md  projects.md
resources/css/: default.css
sections/: about.rst  experience.rst  index.html  projects.rst
static/css/: main.15c11cd4.css  main.15c11cd4.css.map  main.ce726375.css  main.ce726375.css.map  main.d4d71d3e.css  main.d4d71d3e.css.map
static/js/: main.06609958.js  main.06609958.js.map  main.6925ecfb.js  main.6925ecfb.js.map  main.7c01b6c1.js  main.7c01b6c1.js.map  main.892bed22.js  main.892bed22.js.map  main.99b9ccb4.js  main.99b9ccb4.js.map
templates/: default.html
