name:               jakobeha-website
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
homepage:           https://github.com/jakobeha/jakobeha-website
license:            BSD3
license-file:       LICENSE
author:             jakob
maintainer:         jakobeha@gmail.com
category:           Web

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , filepath
  ghc-options:      -threaded
  default-language: Haskell2010
